# final-project-level3-nlp-12

./: .gitignore  README.md  config.json  config_automl_test.json  exp.ipynb  kd_config.json  kd_train.py  parse_config.py  pkm_config.json  requirements.txt  simple_test.py  test.py  test_automl.py  train.py
automl/: proj_dataloader.py  proj_utils.py  train.py  tune.py
automl/prediction/: sample_submission.csv
automl/src/: dataloader.py  loss.py  model.py  trainer.py
automl/src/utils/: data.py  (+2 more)
automl/tests/: test_model_conversion.py  test_model_parser.py
base/: base_trainer.py
data_loader/: data_loaders.py  kd_data_loaders.py
logger/: __init__.py
model/: loss.py  lr_scheduler.py  metric.py  model.py
prototype/fullstack/app/: config.json  database.py  frontend.py  load_data.py  main.py  predict.py  pyproject.toml  utils.py
prototype/fullstack/app/model/: model.py
prototype/fullstack/app/test/: db_test.py  exp.ipynb
prototype/streamlit/: app.py  config.json  load_data.py  pipeline_test.py  predict.py  utils.py
tokenizer/: tokenizer_config.json  vocab.txt
trainer/: __init__.py  kd_trainer.py  trainer.py
utils/: api_response.py  error_handler.py  memory.py  query.py  util.py  utils.py
wandb/: latest-run
wandb/run-20211203_035542-1a18flnr/: run-1a18flnr.wandb
wandb/run-20211203_040054-1i7drez6/: run-1i7drez6.wandb
wandb/run-20211203_040448-348kvvt2/: run-348kvvt2.wandb
wandb/run-20211203_040602-1bia6wwm/: run-1bia6wwm.wandb
wandb/run-20211203_040636-gjizk4va/: run-gjizk4va.wandb
wandb/run-20211203_061138-10b6ubkd/: run-10b6ubkd.wandb
(+54 files in other folders)
