[tool.poetry]
name = "test-fullstack"
version = "0.1.0"
description = ""
authors = ["Jadon <didwodnr123@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
numpy = "^1.21.4"
pandas = "^1.3.5"
datasets = "^1.16.1"
transformers = "^4.14.1"
torch = "^1.10.1"
emoji = "^1.6.1"
soynlp = "^0.0.493"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
